K8S/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433 #default sql port 
          volumeMounts:
          - mountPath: /var/opt/mssql/data #location where the data from database will be stored
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-claim
--- #Create custom IP adress to it can talk different things within the cluster
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql #name of the container
  ports:
    - name: mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
--- #create a loadbalancer to access database from the computer
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql #name of the container
  ports:
   -  protocol: TCP
      port: 1433
      targetPort: 1433
