K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: hobbyhub.com
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 8080
          - path: /api/h/users
            pathType: Prefix
            backend:
              service:
                name: hobbies-clusterip-srv
                port:
                  number: 8080
