K8S/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"   # Set to "true" if using SSL
spec:
  ingressClassName: nginx
  rules:
    - host: hobbyhub.com                      # Replace with your domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus # Replace with the correct Prometheus service name
                port:
                  number: 9090
